--- a/styles.css
+++ b/styles.css
@@ -153,8 +153,18 @@ img {
   color: var(--dark);
 }
 
-.main-subtitle.hidden {
-  visibility: hidden;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .benefits-title {
@@ -273,6 +283,8 @@ section {
   background-color: var(--light);
 }
 footer {
+  padding-top: 100px;
+  padding-bottom: 100px;
   color: var(--accent);
   /* height: 310px; */
   background-color: var(--dark);
@@ -316,12 +328,12 @@ footer {
   color: var(--dark);
 }
 
-.footer.container {
+/* .footer.container {
   padding-top: 100px;
   padding-bottom: 100px;
-}
+} */
 .portfolio-container {
-  padding-top: 0;
+  padding-top: 96px;
   padding-bottom: 120px;
 }
 
@@ -336,12 +348,12 @@ footer {
 .portfolio.filters {
   display: flex;
 
-  padding-bottom: 72px;
+  margin-bottom: 72px;
   margin-left: auto;
   margin-right: auto;
 }
 .portfolio.filters .item + .item {
-  margin-left: 40px;
+  margin-left: 24px;
 }
 .portfolio-card {
   padding-top: 32px;
