--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-  font-family: 'Roboto', 'Verdana', 'Tahoma', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -26,17 +26,6 @@ p {
   margin: 0;
 }
 
-/* Lists styling */
-
-li {
-  list-style: none;
-  padding: 0;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-}
 h1,
 h2,
 h3,
@@ -51,7 +40,18 @@ img {
   height: auto;
 }
 
-/* LOGO */
+/* Lists styling */
+
+li {
+  list-style: none;
+  padding: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+/* ----------LOGO-------------- */
 .logo {
   margin-right: 76px;
 
@@ -96,7 +96,9 @@ img {
   display: block;
   margin-bottom: 16px;
 }
-/* Main navigation */
+/* ----------LOGO-------------- */
+
+/* ------Main navigation ---------*/
 .main-nav {
   display: flex;
   align-items: center;
@@ -125,7 +127,7 @@ img {
   margin-left: auto;
 }
 
-/* Typography */
+/* ---------TITLES------------ */
 .hero-title {
   margin-top: 0;
   margin-bottom: 48px;
@@ -189,11 +191,9 @@ img {
 
   color: var(--dark);
 }
-.container.doing {
-  padding-top: 0;
-}
+/* ---------TITLES------------ */
 
-/* Active elements */
+/* ----Active elements --------*/
 .nav-links {
   display: block;
   padding-top: 24px;
@@ -259,7 +259,7 @@ button:focus {
   color: var(--white);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
-/* Sections */
+/* ----------------Sections--------- */
 header {
   display: block;
   border-bottom: 1px solid var(--accent);
@@ -293,16 +293,6 @@ footer {
   width: 264px;
 }
 
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
-
-  /* outline: 2px solid tomato; */
-}
-
 .hero {
   padding-top: 188px;
   padding-bottom: 188px;
@@ -312,26 +302,19 @@ footer {
   text-align: center;
 }
 
-/* Team cards */
-.card {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  background: var(--white);
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+
+  /* outline: 2px solid tomato; */
 }
-.name {
-  margin-bottom: 8px;
-  font-style: normal;
-  font-size: 20px;
-  line-height: 1.2;
-  text-align: center;
-  letter-spacing: 0.02em;
-  color: var(--dark);
+.container.doing {
+  padding-top: 0;
 }
 
-/* .footer.container {
-  padding-top: 100px;
-  padding-bottom: 100px;
-} */
 .portfolio-container {
   padding-top: 96px;
   padding-bottom: 120px;
@@ -355,16 +338,8 @@ footer {
 .portfolio.filters .item + .item {
   margin-left: 24px;
 }
-.portfolio-card {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  padding-left: 16px;
-  padding-right: 16px;
 
-  border-left: 1px solid var(--accent);
-  border-right: 1px solid var(--accent);
-  border-bottom: 1px solid var(--accent);
-}
+/* ----------------Sections--------- */
 
 .list-wrap {
   display: flex;
@@ -385,4 +360,30 @@ footer {
 
 .listing-content .item:nth-child(n + 7) {
   margin-bottom: 0;
+}
+
+/* -----------Team cards------------- */
+.card {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  background: var(--white);
+}
+.portfolio-card {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
+  padding-right: 16px;
+
+  border-left: 1px solid var(--accent);
+  border-right: 1px solid var(--accent);
+  border-bottom: 1px solid var(--accent);
+}
+.name {
+  margin-bottom: 8px;
+  font-style: normal;
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--dark);
 }
