--- a/css/styles.css
+++ b/css/styles.css
@@ -171,6 +171,7 @@ ul {
 
 .benefits-title {
   margin-top: 0;
+  margin-top: 8px;
   margin-bottom: 8px;
 
   font-size: 20px;
@@ -179,6 +180,29 @@ ul {
 
   color: var(--dark);
 }
+.benefit-icon {
+  content: '';
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 264px;
+  height: 112px;
+
+  background-color: var(--light);
+  border-radius: 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.benefit-icon > .icon {
+  width: 64px;
+  height: 64px;
+}
+
+/* ------TEMPORARY--------- */
+/* .section-content > .item {
+  outline: solid tomato;
+} */
+/* ------TEMPORARY--------- */
 
 .portfolio-title {
   margin-top: 0;
