--- a/css/styles.css
+++ b/css/styles.css
@@ -295,6 +295,26 @@ section {
 .section-content {
   display: flex;
 }
+
+.hero {
+  background-color: var(--dark);
+  background-image: linear-gradient(
+      0deg,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../img/people-office.jpg);
+
+  margin-left: auto;
+  margin-top: auto;
+  text-align: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  padding-top: 188px;
+  padding-bottom: 188px;
+}
+
 .section-content.team {
   display: flex;
   text-align: center;
@@ -306,6 +326,33 @@ section {
 .our-team {
   background-color: var(--light);
 }
+.social-networks {
+  margin-left: 16px;
+  margin-right: 16px;
+}
+.networks-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.network-svg {
+  display: flex;
+  margin-top: 8px;
+  width: 40px;
+  height: 40px;
+  gap: 24px;
+  border-radius: 50%;
+  background-color: var(--primary-brand);
+  justify-content: center;
+  align-items: center;
+}
+.network-item {
+  width: 16px;
+  height: 16px;
+}
+
 .customers {
   padding-top: 130px;
   padding-bottom: 120px;
@@ -342,25 +389,6 @@ footer {
 }
 .footer {
   width: 264px;
-}
-
-.hero {
-  background-color: var(--dark);
-  background-image: linear-gradient(
-      0deg,
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
-    url(../img/people-office.jpg);
-
-  margin-left: auto;
-  margin-top: auto;
-  text-align: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
-  padding-top: 188px;
-  padding-bottom: 188px;
 }
 
 .container {
