--- a/css/styles.css
+++ b/css/styles.css
@@ -384,11 +384,41 @@ footer {
   padding-top: 100px;
   padding-bottom: 100px;
   color: var(--accent);
-  /* height: 310px; */
   background-color: var(--dark);
 }
 .footer {
   width: 264px;
+}
+.footer.container {
+  display: flex;
+  flex-direction: row;
+}
+.footer-media {
+  margin-left: 120px;
+}
+.media-logo {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+
+  color: var(--white);
+}
+.media-links {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  margin-top: 16px;
+}
+.item.media {
+  display: flex;
+  width: 40px;
+  height: 40px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
