--- a/css/styles.css
+++ b/css/styles.css
@@ -524,6 +524,7 @@ footer {
   border-left: 1px solid var(--accent);
   border-right: 1px solid var(--accent);
   border-bottom: 1px solid var(--accent);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .name {
   margin-top: 32px;
