fixed right padding portfolio card descr

--- a/css/styles.css
+++ b/css/styles.css
@@ -532,7 +532,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .portfolio-descr {
   margin-top: 32px;
   margin-left: 16px;
-  margin-right: ;
+  margin-right: 16px;
 
   font-style: normal;
   font-size: 20px;
