--- a/css/styles.css
+++ b/css/styles.css
@@ -186,6 +186,7 @@ ul {
   margin-bottom: 8px;
 
   font-size: 20px;
+  font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
 
@@ -527,6 +528,7 @@ footer {
 .name {
   margin-bottom: 8px;
   font-style: normal;
+  font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   text-align: center;
