--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ ul {
 }
 .footer-logo {
   display: block;
-  margin-bottom: 16px;'
+  margin-bottom: 16px;
   margin-right: 76px;
 
   color: var(--primary-brand);
@@ -105,7 +105,7 @@ ul {
   line-height: 1.33;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  text-decoration: none;'
+  text-decoration: none;
 }
 /* ----------LOGO-------------- */
 
@@ -486,18 +486,6 @@ footer {
 
 /* ----------------Sections--------- */
 
-.listing-content {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  column-gap: 24px;
-  row-gap: 48px;
-}
-.listing-content > .item:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
 /* -----------Team cards------------- */
 .card {
   padding-top: 32px;
@@ -523,6 +511,44 @@ footer {
 }
 .card-image {
   border: none;
+}
+
+.listing-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+
+.listing-content > .item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.item:hover .card-overlay {
+  transform: translateY(0);
+}
+
+.wrap-card-overlay {
+  position: relative;
+  overflow: hidden;
+}
+
+.card-overlay {
+  position: absolute;
+  top: 0;
+  padding-left: 32px;
+  padding-top: 40px;
+  padding-right: 32px;
+  height: 100%;
+
+  font-weight: 400;
+  color: var(--light);
+  background-color: var(--primary-brand);
+
+  transform: translateY(100%);
+  transition: transform 300ms linear;
 }
 
 .name {
