--- a/css/styles.css
+++ b/css/styles.css
@@ -117,10 +117,28 @@ ul {
 
 .site-nav {
   display: flex;
+  gap: 40px;
 }
-.site-nav .item + .item {
+.active {
+  position: relative;
+}
+
+.active::after {
+  display: block;
+  content: '';
+  width: 100%;
+  border-bottom: solid 2px;
+  border-radius: 2px;
+  color: var(--hover);
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+}
+
+/* .site-nav .item + .item {
   margin-left: 40px;
-}
+} */
+
 .site-nav .link {
   display: block;
   padding-top: 24px;
@@ -290,6 +308,8 @@ button:focus {
 /* ----------------Sections--------- */
 header {
   border-bottom: 1px solid var(--accent);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 section {
   padding-top: 120px;
