--- a/css/styles.css
+++ b/css/styles.css
@@ -568,7 +568,8 @@ footer {
   background-color: var(--primary-brand);
 
   transform: translateY(100%);
-  transition: transform 300ms linear;
+  transition: transform 250ms linear;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .name {
