--- a/css/styles.css
+++ b/css/styles.css
@@ -617,6 +617,7 @@ footer {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 300ms linear, visibility 300ms linear;
 }
 .modal {
   position: absolute;
