--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,9 @@ ul {
 /* .site-nav .item + .item {
   margin-left: 40px;
 } */
+header > .container {
+  display: flex;
+}
 
 .site-nav .link {
   display: block;
@@ -150,14 +153,14 @@ ul {
 }
 
 .address {
-  display: flex;
+  /* display: flex;
+  justify-content: end; */
+  margin-left: auto;
 }
-.address .item + .item {
-  margin-left: 40px;
-}
+
 .address-ul {
   display: flex;
-  margin-left: auto;
+  gap: 40px;
 }
 
 /* ---------TITLES------------ */
@@ -259,6 +262,7 @@ ul {
 .nav-links:focus {
   color: var(--hover);
 }
+
 .nav-address {
   display: flex;
   padding-top: 24px;
@@ -335,8 +339,6 @@ ul {
 /* ----------------Sections--------- */
 header {
   border-bottom: 1px solid var(--accent);
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 section {
   padding-top: 120px;
@@ -513,6 +515,7 @@ footer {
 
   /* outline: 2px solid tomato; */
 }
+
 .doing {
   padding-top: 0;
 }
