--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,7 @@ ul {
   gap: 40px;
 }
 .active {
-  position: relative;
+  /* position: relative; */
 }
 
 .active::after {
@@ -257,6 +257,8 @@ header > .container {
   letter-spacing: 0.02em;
   color: var(--dark);
   text-decoration: none;
+  position: relative;
+  transition: 250ms ease;
 }
 .nav-links:hover,
 .nav-links:focus {
@@ -272,6 +274,7 @@ header > .container {
   letter-spacing: 0.02em;
   color: var(--text);
   text-decoration: none;
+  transition: 250ms ease;
 }
 
 .nav-address:hover,
@@ -307,7 +310,8 @@ header > .container {
   color: var(--white);
   border-radius: 4px;
   border-color: transparent;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: 250ms ease;
+  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
 }
 
 .hero-button:hover,
@@ -327,6 +331,10 @@ header > .container {
   border: 1px solid var(--accent);
   border-radius: 4px;
   padding: 12px 24px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  transition: 250ms ease;
 }
 .filter-button:hover,
 .filter-button:focus {
@@ -399,6 +407,7 @@ section {
   background-color: var(--primary-brand);
   justify-content: center;
   align-items: center;
+  transition: 250ms ease;
 }
 .network-svg:hover {
   background-color: var(--hover);
@@ -431,6 +440,7 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 250ms ease;
 }
 .icon-svg > .icon {
   width: 104px;
@@ -493,6 +503,7 @@ footer {
 
   justify-content: center;
   align-items: center;
+  transition: 250ms ease;
 }
 .icon-wrap:hover {
   background: var(--success);
@@ -570,6 +581,9 @@ footer {
   column-gap: 24px;
   row-gap: 48px;
 }
+.listing-content > .item {
+  transition: 250ms ease;
+}
 
 .listing-content > .item:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -598,8 +612,8 @@ footer {
   background-color: var(--primary-brand);
 
   transform: translateY(100%);
-  transition: transform 250ms linear;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   /* overflow: auto; */
 }
 
@@ -623,21 +637,25 @@ footer {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  transition: opacity 300ms linear, visibility 300ms linear;
+  transition: opacity 250ms linear, visibility 250ms linear;
 }
 .modal {
   position: absolute;
   width: 408px;
-  min-height: 576px;
-  left: 516px;
-  top: 88px;
+  height: 576px;
+  left: 50%;
+  top: 50%;
   background-color: var(--moda-bg);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 24px;
+  transform: translate(-50%, -50%);
 }
 .data-modal-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
   cursor: pointer;
   background-color: transparent;
   border-color: transparent;
@@ -649,7 +667,6 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: auto;
 }
 .is-hidden {
   opacity: 0;
