--- a/css/styles.css
+++ b/css/styles.css
@@ -258,7 +258,7 @@ header > .container {
   color: var(--dark);
   text-decoration: none;
   position: relative;
-  transition: 250ms ease;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-links:hover,
 .nav-links:focus {
@@ -274,7 +274,7 @@ header > .container {
   letter-spacing: 0.02em;
   color: var(--text);
   text-decoration: none;
-  transition: 250ms ease;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-address:hover,
@@ -310,7 +310,7 @@ header > .container {
   color: var(--white);
   border-radius: 4px;
   border-color: transparent;
-  transition: 250ms ease;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
 }
 
@@ -334,7 +334,7 @@ header > .container {
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.04em;
-  transition: 250ms ease;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filter-button:hover,
 .filter-button:focus {
@@ -407,7 +407,7 @@ section {
   background-color: var(--primary-brand);
   justify-content: center;
   align-items: center;
-  transition: 250ms ease;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .network-svg:hover {
   background-color: var(--hover);
@@ -440,7 +440,7 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: 250ms ease;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-svg > .icon {
   width: 104px;
@@ -503,7 +503,7 @@ footer {
 
   justify-content: center;
   align-items: center;
-  transition: 250ms ease;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-wrap:hover {
   background: var(--success);
@@ -582,7 +582,7 @@ footer {
   row-gap: 48px;
 }
 .listing-content > .item {
-  transition: 250ms ease;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .listing-content > .item:hover {
