--- a/css/styles.css
+++ b/css/styles.css
@@ -668,3 +668,57 @@ footer {
   visibility: hidden;
   pointer-events: 0;
 }
+
+/* Footer Subscription */
+
+.footer-subscribe {
+  display: block;
+  margin-left: auto;
+}
+.subscribe-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  width: 165px;
+  height: 40px;
+  border-color: transparent;
+  border-radius: 4px;
+  background-color: var(--primary-brand);
+  color: var(--white);
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.subscribe-button:hover,
+.subscribe-button:focus {
+  background-color: var(--hover);
+}
+
+.subscription-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 16px;
+  gap: 24px;
+}
+.subscribe-input {
+  width: 264px;
+  height: 40px;
+  padding: 16px 8px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+/* /Footer Subscription */
