--- a/css/styles.css
+++ b/css/styles.css
@@ -722,3 +722,233 @@ footer {
 }
 
 /* /Footer Subscription */
+
+/* Modal window */
+.modal {
+  position: absolute;
+  width: 408px;
+  height: 584px;
+  left: 50%;
+  top: 50%;
+  background-color: var(--moda-bg);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  padding-top: 72px;
+  padding-left: 22px;
+  padding-right: 24px;
+  padding-bottom: 24px;
+  transform: translate(-50%, -50%);
+}
+
+.data-modal-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  cursor: pointer;
+  background-color: transparent;
+  border-color: transparent;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background: var(--accent);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.data-modal-close:hover {
+  background-color: var(--hover);
+  fill: var(--white);
+  border-color: transparent;
+}
+
+.modal-title {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--dark);
+}
+
+.subscribe-button {
+  display: flex;
+  width: 165px;
+  height: 40px;
+  justify-content: center;
+  text-align: center;
+  gap: 16px;
+  cursor: pointer;
+
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  padding: 16px 32px;
+  background: var(--primary-brand);
+  color: var(--white);
+  border-radius: 4px;
+  border-color: transparent;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-button:hover,
+.subscribe-button:focus {
+  background: var(--hover);
+}
+.subscr-button-text {
+}
+.subscribe-icon {
+  display: flex;
+  flex-shrink: 0;
+}
+
+.terms-conditions {
+  font-weight: 400;
+  font-size: 12px;
+  margin-bottom: 24px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+
+  color: #757575;
+}
+.modal-input {
+  display: block;
+  width: 100%;
+  height: 40px;
+  margin-bottom: 8px;
+  padding: 8px 16px 8px 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: transparent;
+}
+.modal-input:focus {
+  border-color: var(--primary-brand);
+}
+.modal-input:focus + .modal-icon {
+  fill: var(--primary-brand);
+}
+
+.modal-icon {
+  position: absolute;
+  left: 8px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.check-icon {
+  width: 16px;
+  height: 16px;
+  border: 1.25px solid var(--dark);
+  border-radius: 2px;
+  fill: var(--white);
+  /* margin-right: 8px; */
+  display: inline-block;
+  align-items: center;
+  justify-content: center;
+}
+
+.form-label {
+  display: inline-block;
+  margin-bottom: 4px;
+}
+
+.input-wrap {
+  position: relative;
+}
+
+.modal-textarea {
+  width: 100%;
+  height: 120px;
+  margin-bottom: 16px;
+  padding: 8px 16px;
+  display: block;
+  width: 100%;
+
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+.modal-textarea:focus {
+  border-color: var(--primary-brand);
+}
+.modal-textarea::placeholder {
+  display: block;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal label {
+  display: block;
+  color: var(--light-slate);
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.01em;
+}
+.comment-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.comment-label {
+  display: flex;
+  margin-left: 8px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+
+  color: #757575;
+}
+
+.terms-check {
+  display: flex;
+  align-items: center;
+}
+
+.terms-check:checked + .check-label > .check-icon {
+  background-color: var(--hover);
+  fill: var(--white);
+  border: none;
+}
+
+.check-label {
+  display: flex;
+  gap: 8px;
+}
+
+.submit-button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 169px;
+  height: 56px;
+  text-align: center;
+  cursor: pointer;
+  margin-top: 24px;
+
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  background: var(--primary-brand);
+  color: var(--white);
+
+  border-color: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+.submit-button:hover,
+.submit-button:focus {
+  background-color: var(--hover);
+}
+
+/* /Modal window */
