--- a/css/styles.css
+++ b/css/styles.css
@@ -822,6 +822,8 @@ footer {
 }
 .modal-input {
   display: block;
+  margin-top: 0;
+  margin-bottom: 0;
   width: 100%;
   height: 40px;
   margin-bottom: 8px;
@@ -851,6 +853,7 @@ footer {
 }
 
 .form-label {
+  margin-top: 0;
   display: inline-block;
   margin-bottom: 4px;
   color: var(--light-slate);
@@ -887,7 +890,9 @@ footer {
 }
 
 .modal label {
-  display: block;
+  /* display: block; */
+  margin-top: 0;
+  margin-bottom: 0;
   color: var(--light-slate);
   font-size: 12px;
   line-height: 1.33;
