--- a/css/styles.css
+++ b/css/styles.css
@@ -826,7 +826,7 @@ footer {
   margin-bottom: 0;
   width: 100%;
   height: 40px;
-  margin-bottom: 8px;
+  /* margin-bottom: 8px; */
   padding: 8px 16px 8px 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
