--- a/css/styles.css
+++ b/css/styles.css
@@ -853,9 +853,10 @@ footer {
 }
 
 .form-label {
-  margin-top: 0;
-  display: inline-block;
+  display: block;
+  margin-top: 8px;
   margin-bottom: 4px;
+
   color: var(--light-slate);
 }
 
@@ -891,13 +892,13 @@ footer {
 
 .modal label {
   /* display: block; */
-  margin-top: 0;
-  margin-bottom: 0;
+
   color: var(--light-slate);
   font-size: 12px;
   line-height: 1.33;
   letter-spacing: 0.01em;
 }
+
 .comment-wrap {
   display: flex;
   align-items: center;
@@ -927,7 +928,6 @@ footer {
 .check-label {
   display: flex;
   align-items: center;
-  gap: 8px;
 }
 .check-wrap {
   position: relative;
